<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A0A23"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnskip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        android:text="@string/skip"
        android:textColor="@color/text_soft_white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideviewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="15dp"
        android:background="#00000000"
        android:text="@string/back"
        android:textColor="@color/text_soft_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideviewpager"
        app:layout_constraintVertical_bias="0.971" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:background="#00000000"
        android:text="@string/next"
        android:textColor="@color/text_soft_white"

        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideviewpager"
        app:layout_constraintVertical_bias="0.971" />

    <LinearLayout
        android:id="@+id/indicatorlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/slideviewpager" />
</androidx.constraintlayout.widget.ConstraintLayout>