<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_dark_navy"
    android:padding="2dp"
    tools:context=".MainActivityhome2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:id="@+id/imgback"
            android:src="@drawable/back"
            android:clickable="true"
            android:contentDescription="back"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvchargifyhead"
            android:fontFamily="@font/roboto_condensed_bold_italic"
            android:text="@string/chargify"
            android:textColor="@color/bright_cyan"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp">


            <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
                android:id="@+id/circularFillableLoader"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cfl_border="true"
                app:cfl_border_width="6dp"
                app:cfl_wave_color="@color/electric_green"
                app:cfl_progress="70"
                app:cfl_wave_amplitude="0.2" />


            <TextView
                android:id="@+id/batteryPercentageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="70%"
                android:textColor="@color/bright_cyan"
                android:layout_marginStart="10dp"
                android:textSize="35dp"
                android:textStyle="bold" />
        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:backgroundTint="#1F3A60"
            android:layout_marginTop="25dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvstartanim"
                    android:fontFamily="@font/roboto_condensed_bold_italic"
                    android:text="@string/start_animation"
                    android:textColor="@color/bright_cyan"
                    android:textSize="28sp"
                    android:layout_margin="15dp"
                    />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:shadowColor="@color/electric_green"
                    android:clickable="true"

                     />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="27dp"
            android:focusable="true"
            app:cardCornerRadius="15dp"
            android:clickable="true"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/cardselectanim"
            android:backgroundTint="#1F3A60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imgrvhome"
                    android:layout_margin="10dp"
                    android:contentDescription="imgrvhome"
                    android:src="@drawable/rocket"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Select Animation"
                    android:id="@+id/tvselectanim"
                    android:textSize="25dp"
                    android:textColor="@color/bright_cyan"
                    android:fontFamily="@font/roboto_condensed_bold_italic"
                    android:layout_marginStart="35dp"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:focusable="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
           android:id="@+id/cardsettings"
            android:clickable="true"
            android:backgroundTint="#1F3A60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:id="@+id/imgbaterysettings"
                    android:layout_margin="10dp"
                    android:contentDescription="imgsettings"
                    android:src="@drawable/battery"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/battery_info"
                    android:id="@+id/tvbatterryinfo"
                    android:textSize="26dp"
                    android:textColor="@color/bright_cyan"
                    android:fontFamily="@font/roboto_condensed_bold_italic"
                    android:layout_marginStart="35dp"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>
